2006-01-26  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        Leak fixes in SVG code.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6588

        * kcanvas/device/quartz/KRenderingPaintServerGradientQuartz.mm:
        (teardownShadingWithStyle): delete image and context when through.
        (KRenderingPaintServerGradientQuartz::KRenderingPaintServerGradientQuartz): zero out cached mask
        (KRenderingPaintServerGradientQuartz::~KRenderingPaintServerGradientQuartz): destroy cached mask image.
        (KRenderingPaintServerLinearGradientQuartz::setup): delete mask before making new
        (KRenderingPaintServerRadialGradientQuartz::setup): delete mask before making new
        * ksvg2/misc/KCanvasRenderingStyle.cpp:
        (WebCore::sharedSolidPaintServer): forgot "static" keyword
        * ksvg2/svg/SVGPolyElementImpl.cpp:
        (SVGPolyElementImpl::notifyAttributeChange): use RefPtr

2006-01-26  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.

        - various leaks on "fast" LayoutTests
        
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6819
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6823
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6824
        
        It turns out these all had the same cause.
        
        * page/Frame.cpp:
        (Frame::clear): If we have a document, make sure to cancel parsing,
        in case it has a tokenizer and parser that are keeping it alive. Use
        cancelParsing to avoid possibly accidentally firing the onload handler.
        * khtml/xml/DocumentImpl.cpp:
        (WebCore::DocumentImpl::cancelParsing): Factored out of implicitOpen.
        (WebCore::DocumentImpl::implicitOpen): Call cancelParsing now.
        * khtml/xml/DocumentImpl.h:

2006-01-26  Beth Dakin  <bdakin@apple.com>

        Reviewed by Hyatt.

        Fix for <rdar://problem/4256504> khtml::RenderBlock::skipWhitespace 
        crashes upon interaction with radio buttons.
